implemented new features

--- a/templates/insert.ejs
+++ b/templates/insert.ejs
@@ -19,12 +19,15 @@
                 document.getElementById("h2").style.visibility = "hidden";
             }
         }
+        function submitForm() {
+            return confirm('Ensure that User Info and unit system selection are correct!\nYou will only be able to update physical data later.')
+        }
     </script>
 </head>
 
 <body>
 	<h1>Enter your information</h1>
-	<form action=<%- formAction %> method="post" onSubmit="return confirm('Ensure the user info you entered is correct!\nYou will be able to update physical data later.')">
+	<form action="<%- formAction %>" method="post" onSubmit="submitForm()">
         
         <fieldset>
             <legend>
@@ -50,16 +53,18 @@
             Choose a unit system:
             <label><input type="radio" id="imp" name="unit" value="imperial" onchange="unitsImp(this)" checked>Imperial</label>
             <label><input type="radio" id="met" name="unit" value="metric" onchange="unitsM(this)">Metric</label>
-           <br><div id="dataFields"><br>
+            <br><br>
             <label>Weight:
                 <input type="number" name="weight" min="1" max="600" required> <span id="wUnit">lb</span>
             </label>
             <br><br>
             <label>Height:
                 <input type="number" name="height1" min="1" max="900" required> <span id="hUnit1">ft</span>
-            </label>&nbsp;<span id="h2"><input type="number" name="height2" min="0" max="11"> in</span></div>
+            </label>&nbsp;<span id="h2"><input type="number" name="height2" min="0" max="11"> in</span>
         </fieldset>
         <br>
+        <!-- for distinguishing b/w updates and new insertions -->
+        <input type="hidden" name="flag" value="newProfile">
         <input type="reset" value="Reset Values"/>
 		<input type="submit" value="Submit Data"/>
 	</form>
