--- a/templates/processed.ejs
+++ b/templates/processed.ejs
@@ -8,7 +8,7 @@
         function adjustUnits() {
             if ("<%- unit %>" === "metric") {
                 document.getElementById("wUnit").innerHTML = "kg";
-                document.getElementById("hUnit").innerHTML = "m";
+                document.getElementById("hUnit").innerHTML = "cm";
             }
         }
     </script>
@@ -19,8 +19,10 @@
 
 	<strong>Name:</strong> <%- name %><br>
     <strong>Email Address:</strong> <%- email %><br>
+    <br>
     <strong>Weight:</strong> <%- weight %> <span id="wUnit">lb</span><br>
-    <strong>Height:</strong> <%- height %> <span id="hUnit">in</span><br>
+    <strong>Height:</strong> <%- height1 %> <span id="hUnit">in</span><br>
+    <br>
     <strong>BMI:</strong> <%- bmi %><br>
     <strong>Weight Category:</strong> <%- weightCategory %>
     <hr>
