minor DOM display fix

--- a/templates/profile.ejs
+++ b/templates/profile.ejs
@@ -14,7 +14,7 @@
                 document.getElementById("h2").value = 0;
                 document.getElementById("h2").style.display = "none";
             } else
-                document.getElementById("h2").value = `<%- height1 %>`;
+                document.getElementById("height2").value = `<%- height2 %>`;
         }
         function updateData() {
             document.getElementById("weight").removeAttribute("readonly");
