CSS implementation and search function

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -3,19 +3,28 @@
 
 <head>
 	<meta charset="utf-8" />
+	<link rel="stylesheet" href="/templates/indexStyle.css" type="text/css">
 	<title>BMI Calculator</title>
 </head>
 
 <body>
-	<h1>BMI Calculator</h1>
-
-	<h2>Tools</h2>
-	<ul>
-		<li><a href="/insertData">Calculate Your Body Mass Index (BMI)</a></li>
-		<li><a href="/query">View Profile/Info</a></li>
-	</ul>
-
+	<div id = "title"> BODY MASS INDEX </div>
 	<hr>
+	<div id = "main1">
+	<div class = "d1"><img src="/templates/images/bmi.jpg" id = "bmiImg"></div>
+	
+	<div id = "links">
+		<ul >
+			<li><button class = "btn"><a href="/insertData">Calculate Your Body Mass Index (BMI)</a></button></li>
+			<br><br>
+			<li><button class = "btn"><a href="/query">View Profile/Info</a></button></li>
+			<br><br>
+			<li><button class = "btn"><a href="/searchPage">Search nutritional information</a></button></li>
+		</ul>
+	</div>
+	</div>
+	<br><br><br><br><br>
+	
 </body>
 
 </html>
