--- a/templates/insert.ejs
+++ b/templates/insert.ejs
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Data Collection</title>
+    <link rel="stylesheet" href="/templates/insertStyle.css" type="text/css">
     <script>
         function unitsImp(x) {
             if(x.checked) {
@@ -23,48 +24,38 @@
 </head>
 
 <body>
-	<h1>Enter your information</h1>
-	<form action=<%- formAction %> method="post" onSubmit="return confirm('Ensure the user info you entered is correct!\nYou will be able to update physical data later.')">
+    <div id = "main1">
+	<div class = "d1"><img src="/templates/images/Home.png" id = "hImg"></div>
+    <div id = "d2">
+	<form id = "f1" action=<%- formAction %> method="post" onSubmit="return confirm('Ensure the user info you entered is correct!\nYou will be able to update physical data later.')">
         
-        <fieldset>
-            <legend>
-                <strong>&nbsp; User Info &nbsp;</strong>
-            </legend>
-
-            <label>Name:
-                <input type="text" name="name" autofocus required>
-            </label>
-            &nbsp; &nbsp; &nbsp;
-            <label>Email:
-                <input type="email" name="email" required>
-            </label> <br>
-        </fieldset>
-
-        <br>
-
-        <fieldset>
-            <legend>
-                <strong>&nbsp; Physical Data &nbsp;</strong>
-            </legend>
-            
-            Choose a unit system:
-            <label><input type="radio" id="imp" name="unit" value="imperial" onchange="unitsImp(this)" checked>Imperial</label>
-            <label><input type="radio" id="met" name="unit" value="metric" onchange="unitsM(this)">Metric</label>
-           <br><div id="dataFields"><br>
-            <label>Weight:
-                <input type="number" name="weight" min="1" max="600" required> <span id="wUnit">lb</span>
-            </label>
+        <br><br>
+            <label>Name:</label>
             <br><br>
-            <label>Height:
-                <input type="number" name="height1" min="1" max="900" required> <span id="hUnit1">ft</span>
-            </label>&nbsp;<span id="h2"><input type="number" name="height2" min="0" max="11"> in</span></div>
-        </fieldset>
+            <input type="text" name="name" autofocus required>
+            <br><br>
+            <label>Email:</label>
+            <br><br>
+            <input type="email" name="email" required>
+            <br><br>
+            <label>Choose a unit system:</label><br><br>
+            <input type="radio" id="imp" name="unit" value="imperial" onchange="unitsImp(this)" checked><label>Imperial</label>
+            <input type="radio" id="met" name="unit" value="metric" onchange="unitsM(this)"><label>Metric</label>
+           <br><div id="dataFields"><br>
+            <label>Weight:</label>&nbsp;
+            <input type="number" name="weight" min="1" max="600" required> <span id="wUnit">lb</span>
+            <br><br>
+            <label>Height:</label>&nbsp;&nbsp;
+            <input type="number" name="height1" min="1" max="900" required> <span id="hUnit1">ft&nbsp;&nbsp;</span>
+            <span id="h2"><input type="number" name="height2" min="0" max="11"> in</span></div>
         <br>
         <input type="reset" value="Reset Values"/>
 		<input type="submit" value="Submit Data"/>
 	</form>
-    <hr>
-    <a href="/">HOME</a>
+    </div>
+    </div>
+    <br>
+    <div id = "bottom"><a href="/">HOME</a></div>
 </body>
 
 </html>
