--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -11,8 +11,9 @@
 
 	<h2>Tools</h2>
 	<ul>
-		<li><a href="/insertData">Calculate Your Body Mass Index (BMI)</a></li>
+		<li><a href="/insertData">Create New BMI Profile</a></li>
 		<li><a href="/query">View Profile/Info</a></li>
+		<li><a href="/">Delete Profile (UNDER CONSTRUCTION)</a></li>
 	</ul>
 
 	<hr>
