--- a/templates/insert.ejs
+++ b/templates/insert.ejs
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <h1>N E W &nbsp;&nbsp;U S E R &nbsp;&nbsp;R E G I S T R A T I O N</h1>
     <div id = "main1">
 	<div class = "d1"><img src="/templates/images/Home.png" id = "hImg"></div>
     <div id = "d2">
@@ -56,11 +57,11 @@
         <input type="hidden" name="flag" value="newProfile">
         <input type="reset" value="Reset Values"/>
 		<input type="submit" value="Submit Data"/>
+        <button><a href="/">Main Page</a></button>
 	</form>
     </div>
     </div>
     <br>
-    <div id = "bottom"><a href="/">HOME</a></div>
 </body>
 
 </html>
