--- a/templates/searchPage.ejs
+++ b/templates/searchPage.ejs
@@ -4,14 +4,23 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Search</title>
+    <link rel="stylesheet" href="/templates/searchStyle.css" type="text/css">
 </head>
 
 <body>
-
+    <div id = "main3">
+    <div id = "d5">BMI RESEARCH</div>
+    <div id = "sr1">
     <form id = "f1" action= "<%- formAction %>" method = "post">
+        <br><br>
         <label>Your search query</label><br><br>
-        <input type="text" name="sQuery">
+        <input type="text" name="sQuery"><br><br>
         <input type = "submit" value = "search">
+        <button id = "bt1"><a href="/">Main Page</a></button>
     </form>
+    
+    </div>
+    </div>
+    
 </body>
 </html>
