--- a/templates/searchResult.ejs
+++ b/templates/searchResult.ejs
@@ -9,10 +9,18 @@
 
 <body>
     <div id = "main1">
-        <div id = "d2"><img src="/templates/images/img1.png"></div>
-        <div id = "d1"> <h2>Your search results</h2>
+        <div id = "d2"><img src="/templates/images/img1.png">
+            <div id = "d6">
+                <button><a href="/searchPage">Another search?</a></button><br><br>
+                <button><a href="/">Main Page</a></button>
+            </div>
+        </div>
+        <div id = "d1"> <h2>S E A R C H  &nbsp;&nbsp; R E S U L T S</h2>
+            <hr>
             <%- searchData %> 
         </div>
+        
     </div>
+    
 </body>
 </html>
