--- a/templates/indexStyle.css
+++ b/templates/indexStyle.css
@@ -14,15 +14,21 @@ body {
 #links {
     float: left;
     margin-left: 4rem; 
-    margin-top: 2em;
+    margin-top: 4em;
 }
 
 #title {
-    margin-left: 1em;
+    float : left;
+     width: 4em;
+    margin-right: 0.3em;
     margin-top: 0.5em;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 3em;
-    color: #20221A;
+    font-size: 2.6em;
+    color: #393f29;
+    writing-mode: vertical-rl;
+    font-weight: bold;
+    text-orientation: upright;
+    border-right: 6px solid #9BA17B;
 }
 
 hr {
@@ -102,13 +108,15 @@ hr:hover {
       }
       
       .btn {
-        background-image: linear-gradient(#63674E, #F8F9F6);
-          border-radius: 10px;
-          
-          width: 30em;
-          height: 6em;
-          font-family: Arial, Helvetica, sans-serif;
-          font-size: 1em;
+
+        background-image: linear-gradient(90deg,#666a43, transparent);
+        border-radius: 15px;
+        border: 1px solid #8b8a63;
+        width: 30em;
+        height: 6em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1em;
+        color: #1a1b16;
       }
 
       ul {
