--- a/templates/insertStyle.css
+++ b/templates/insertStyle.css
@@ -2,13 +2,17 @@ body {
    background-color: #F6F7F4;
     background-repeat: no-repeat;
     background-size: cover;
-    backdrop-filter: blur(2px);
 }
 
 #hImg {
     margin-left: 3em;
     height: 650px;
     width: 550px;
+}
+
+h1 {
+    color: #3e4122;
+    text-align: center;
 }
 
 .d1 {
@@ -39,7 +43,7 @@ body {
     background-color: #BFC3AA;
     margin-left: 2em;
     margin-right: 2em;
-    margin-top: 7em;
+    margin-top: 3em;
 }
 
 img {
@@ -98,3 +102,19 @@ img {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
+  a {
+    font-size: 1.2em;
+    text-decoration: none;
+    color: #2b2d22;
+    font-weight: bold;
+  }
+
+  button {
+      margin-top: 4em;
+      margin-left: 3em;
+    background-image: linear-gradient(90deg,#898f5c, transparent);
+    width: 20em;
+    height: 3em;
+    border-radius: 15px;
+    border: 1px solid #8b8a63;
+}
