added delete profile button

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -19,7 +19,9 @@
 			<br><br>
 			<li><button class = "btn"><a href="/query">View Profile/Info</a></button></li>
 			<br><br>
-			<li><button class = "btn"><a href="/searchPage">Search nutritional information</a></button></li>
+			<li><button class = "btn"><a href="/deleteProfile">Delete Profile</a></button></li>
+			<br><br>
+			<li><button class = "btn"><a href="/searchPage">Search Nutritional Information</a></button></li>
 		</ul>
 	</div>
 	</div>
