small format changes, added deleteProfile link

--- a/templates/error.ejs
+++ b/templates/error.ejs
@@ -11,11 +11,13 @@
 
 	<h2>You may try to:</h2>
 	<ul>
-		<li><a href="/query">look up another profile</a></li>
+		<li><a href="/query">Look up another profile</a></li>
 		<br>
-		<li><a href="/insertData">create your own profile!</a></li>
+		<li><a href="/insertData">Create your own profile</a></li>
 		<br>
-		<li><a href="/">visit the Home page</a></li>
+		<li><a href="/deleteProfile">Try deleting another profile</a></li>
+		<br>
+		<li><a href="/">Visit the home page</a></li>
 	</ul>
 
 	<hr>
