--- a/templates/lookup.ejs
+++ b/templates/lookup.ejs
@@ -4,12 +4,26 @@
 <head>
 	<meta charset="utf-8" />
 	<title>User Profile Query</title>
-    </head>
+    <script>
+        function adjustText() {
+            if ("<%- flag %>" === "delete")
+                document.getElementById("submitBtn").value = "Delete Profile"
+        }
+        function confirmDelete() {
+            if ("<%- flag %>" === "delete") {
+                /* "successful", meaning if profile with given info exists */
+                let msg = "If a profile with this user info exists, the deletion will go through.\n";
+                msg += "Are you sure you want to delete this BMI profile? (This action cannot be undone!)";
+                return confirm(msg);
+            }
+        }
+    </script>
+</head>
 
-<body>
+<body onload="adjustText()">
 	<h1>Enter user info to lookup profile</h1>
 
-	<form action="<%- formAction %>" method="post">
+	<form action="<%- formAction %>" method="post" onsubmit="return confirmDelete()">
         <label>Name:
             <input type="text" name="qName" id="qName" autofocus required>
         </label>
