--- a/templates/error.ejs
+++ b/templates/error.ejs
@@ -4,12 +4,16 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Query Error</title>
+	<link rel="stylesheet" href="/templates/errorStyle.css" type="text/css">
 </head>
 
 <body>
-	<h1>No user found with given credentials &#128531;</h1>
+	<h1>Oops...</h1>
+	<div id = "m0">
+	<div id ="m1">
+	<h2>No user found with given credentials &#128531;</h2>
 
-	<h2>You may try to:</h2>
+	<h4>You may try to:</h4>
 	<ul>
 		<li><a href="/query">look up another profile</a></li>
 		<br>
@@ -17,8 +21,7 @@
 		<br>
 		<li><a href="/">visit the Home page</a></li>
 	</ul>
-
-	<hr>
+	</div></div>
 </body>
 
 </html>
