--- a/templates/searchPage.ejs
+++ b/templates/searchPage.ejs
@@ -10,15 +10,16 @@
 <body>
     <div id = "main3">
     <div id = "d5">BMI RESEARCH</div>
+    <div id = "sr2">
     <div id = "sr1">
     <form id = "f1" action= "<%- formAction %>" method = "post">
         <br><br>
-        <label>Your search query</label><br><br>
-        <input type="text" name="sQuery"><br><br>
+        <label>Search here</label><br><br>
+        <input type="text" class ="icon" placeholder="Search" name="sQuery"><br><br>
         <input type = "submit" value = "search">
         <button id = "bt1"><a href="/">Main Page</a></button>
     </form>
-    
+    </div>
     </div>
     </div>
     
