--- a/templates/lookup.ejs
+++ b/templates/lookup.ejs
@@ -4,23 +4,29 @@
 <head>
 	<meta charset="utf-8" />
 	<title>User Profile Query</title>
+    <link rel="stylesheet" href="/templates/searchStyle.css" type="text/css">
     </head>
 
 <body>
-	<h1>Enter user info to lookup profile</h1>
-
-	<form action="<%- formAction %>" method="post">
-        <label>Name:
-            <input type="text" name="qName" id="qName" autofocus required>
-        </label>
-        &nbsp;
-        <label>Email:
-            <input type="email" name="qEmail" id="qEmail" required>
-        </label>
-        &nbsp; 
-        <input type="submit" value="Find Profile"/>
-    </form>
-    <hr>
+    <div id = "main3">
+        <div id = "d5">LOOKUP USER</div>
+        <div id = "sr2">
+        <div id = "sr1">
+            <br>
+            <div id = "sr3">
+            <label>Enter the user information to lookup profile</label>
+            <br><br>
+            <form action="<%- formAction %>" method="post">
+                <label>Name:</label><br><br>
+                <input type="text" name="qName" id="qName" autofocus required><br><br>
+                <label>Email:</label><br><br>
+                <input type="email" name="qEmail" id="qEmail" required> <br><br>
+                <input type="submit" value="Find Profile"/>
+            </form>
+            </div>
+        </div>
+        </div>
+        </div>
     <a href="/">HOME</a>
 </body>
 
