--- a/templates/processStyle.css
+++ b/templates/processStyle.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #d9d9c7;
+    background-color: #f1f1eb;
      background-repeat: no-repeat;
      background-size: cover;
  }
@@ -10,23 +10,43 @@ body {
  }
 
  #d1 {
-     margin-left: 25em;
-     margin-top: 4em;
-     height: 450px;
-     width: 600px;
-     background-color: #999d80;
+    margin-left: 25em;
+    margin-top: 4em;
+    height: 500px;
+    width: 700px;
+    border-left: 4px solid #a1a296;
+    border-top: 4px solid #a1a296;
  }
 
  #d2 {
-     margin-left: 2em;
+    margin-left: 3em;
+    margin-top: 1.5em;
+    height: 450px;
+    width: 600px;
+    background-color: #999d80;
  }
 
  ul {
     list-style-type: none;
+    margin-left: 2em;
   }
 
   li {
       font-family: Arial, Helvetica, sans-serif;
-      color:#d9d9c7;
+      color:#2a2a28;
       font-size: 1.2em;
   }
+
+  hr {
+    height: 7px;
+    background-image: linear-gradient(90deg,#393b2d, transparent);
+    margin-left: 1em;
+    border: 0;
+}
+a {
+    background-color: #b0b2a3;
+    color: #282a21;
+    font-size: 1.3em;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
