--- a/templates/searchStyle.css
+++ b/templates/searchStyle.css
@@ -3,7 +3,30 @@ body {
      background-repeat: no-repeat;
      background-size: cover;
  }
-
+ body {
+    animation: 10000ms ease-in-out infinite color-change;
+  }
+  
+  @keyframes color-change {
+    0% {
+      background-color: #8b8a63;
+    }
+    20% {
+      background-color: #7C8162;
+    }
+    40% {
+      background-color: #4F523E;
+    }
+    60% {
+      background-color: #282A20;
+    }
+    80% {
+      background-color: #7C8162;
+    }
+    100% {
+      background-color: #8b8a63;
+    }
+  }
  #main3 {
      display: flex;
  }
@@ -18,28 +41,48 @@ body {
     font-family:Arial, Helvetica, sans-serif;
     font-weight: bold;
  }
+
+ .icon {
+    padding-left: 25px;
+    background: url("/templates/images/icons8-google-48.png") no-repeat left;
+    background-size: 20px;
+  }
  
  label {
      margin-top: 10em;
-     margin-left: 5em;
-     font-size: 2em;
+     margin-left: 7em;
+     font-size: 1.1em;
      font-family: Arial, Helvetica, sans-serif;
-     color: #323528;
+     color: #191a18;
  }
- input[type = "text"] {
+
+ #sr3 {
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #404140;
+ }
+ input[type = "text"], input[type = "email"] {
     margin-left: 10em;
      width: 25em;
-     height: 3em;
+     height: 2.5em;
      background-color: #EAECE4;
+ }
+
+ #sr2 {
+    float: left;
+    margin-top: 10em;
+    margin-left: 20em;
+     height: 360px;
+     width: 650px;
+     border-bottom: 5px solid #c6c8c0;
+     border-right: 5px solid #c6c8c0;
  }
 
  #sr1 {
      float: left;
-    margin-top: 10em;
-    margin-left: 20em;
-     height: 300px;
-     width: 600px;
-     background-image: linear-gradient(#63674E, #F8F9F6);
+    height: 300px;
+    width: 600px;
+     background-image: linear-gradient(#afb0a8, #F8F9F6);
  }
  input[type = "submit"] {
      width: 10em;
