added delete lookup formatting

--- a/templates/lookup.ejs
+++ b/templates/lookup.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8"/>
 	<title>User Profile Query</title>
     <script>
         function adjustText() {
@@ -32,7 +32,7 @@
             <input type="email" name="qEmail" id="qEmail" required>
         </label>
         &nbsp; 
-        <input type="submit" value="Find Profile"/>
+        <input type="submit" id="submitBtn" value="Find Profile"/>
     </form>
     <hr>
     <a href="/">HOME</a>
