--- a/templates/searchStyle.css
+++ b/templates/searchStyle.css
@@ -124,7 +124,7 @@ table {
     border: 3px solid #706f5e;
 }
 
-th, td {
+td {
     border: 1px solid #9d9c7f;
     margin-top: 3em;
     height : 70px;
@@ -132,6 +132,7 @@ th, td {
     text-align: center;
     
 }
+
 h2 {
     text-align: center;
 }
@@ -154,6 +155,12 @@ a {
     text-decoration: none;
 }
 
+.lk1 {
+    color: #282a21;
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
 button {
     background-image: linear-gradient(90deg,#666a43, transparent);
     width: 20em;
@@ -170,4 +177,16 @@ button {
     border: 1px solid #8b8a63;
     margin-top: 2em;
     margin-left: 12em;
+}
+
+.slides{
+    height: 400px;
+    width: 450px;
+    margin: 20px auto;
+}
+
+#box{
+    width:100%;
+    height:100%;
+    object-fit: contain;
 }
