--- a/templates/errorStyle.css
+++ b/templates/errorStyle.css
@@ -46,3 +46,9 @@ body {
       color: #2c2c2a;
       text-decoration: none;
   }
+
+  /* sources:
+  https://freefrontend.com/css-border-examples/
+  https://css-tricks.com/css-borders-using-masks/
+  https://www.w3schools.com/w3css/defaulT.asp
+  https://www.geeksforgeeks.org/css/ */
