--- a/templates/insertStyle.css
+++ b/templates/insertStyle.css
@@ -143,3 +143,10 @@ img {
     border-radius: 15px;
     border: 1px solid #8b8a63;
 }
+
+
+/* sources:
+  https://freefrontend.com/css-border-examples/
+  https://css-tricks.com/css-borders-using-masks/
+  https://www.w3schools.com/w3css/defaulT.asp
+  https://www.geeksforgeeks.org/css/ */
