--- a/templates/profileStyle.css
+++ b/templates/profileStyle.css
@@ -137,3 +137,10 @@ a {
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
 }
+
+
+/* sources:
+  https://freefrontend.com/css-border-examples/
+  https://css-tricks.com/css-borders-using-masks/
+  https://www.w3schools.com/w3css/defaulT.asp
+  https://www.geeksforgeeks.org/css/ */
