--- a/templates/searchStyle.css
+++ b/templates/searchStyle.css
@@ -190,3 +190,10 @@ button {
     height:100%;
     object-fit: contain;
 }
+
+
+/* sources:
+  https://freefrontend.com/css-border-examples/
+  https://css-tricks.com/css-borders-using-masks/
+  https://www.w3schools.com/w3css/defaulT.asp
+  https://www.geeksforgeeks.org/css/ */
