--- a/templates/indexStyle.css
+++ b/templates/indexStyle.css
@@ -129,3 +129,9 @@ hr:hover {
           font-family: Arial, Helvetica, sans-serif;
           text-decoration: none;
       }
+
+/* sources:
+  https://freefrontend.com/css-border-examples/
+  https://css-tricks.com/css-borders-using-masks/
+  https://www.w3schools.com/w3css/defaulT.asp
+  https://www.geeksforgeeks.org/css/ */
